[project]
classifiers = [
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Software Development :: Quality Assurance",
  "Topic :: Software Development :: Testing",
]
description = "Patternfly5 widget library for Widgetastic."
dynamic = ["version"]
keywords = ["widgetastic", "patternfly", "patternfly5"]
license = {file = "LICENSE"}
maintainers = [
  {name = "Nikhil Dhandre", email = "ndhandre@redhat.com"},
  {name = "Egor Shamardin", email = "eshamard@redhat.com"},
  {name = "Mike Shriver", email = "mshriver@redhat.com"},
  ]
name = "widgetastic.patternfly5"
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "widgetastic.core>=2.0.0", # 2.x.x supports Playwright (1.x.x supports Selenium)
]

[project.optional-dependencies]
dev = [
  "pre-commit",
  "pytest",
  "pytest-cov",
  "pytest-xdist",
  "pytest-rerunfailures",
  "pytest-timeout",
  "codecov",
  "playwright",
]
doc = ["sphinx"]

[project.urls]
repository = "https://github.com/RedHatQE/widgetastic.patternfly5"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling", "hatch-vcs"]

[tool.hatch.build.targets.wheel]
packages = ["src/widgetastic_patternfly5"]

[tool.hatch.version]
source = "vcs"
raw-options.version_scheme = "calver-by-date"

[tool.hatch.envs.test]
features = ["dev"]

[tool.hatch.envs.test.scripts]
# Installs browser binaries and Linux system-level dependencies.
# Run once after setting up the environment: hatch run test:install-browsers
install-browsers = [
  "playwright install chromium firefox",
  "playwright install-deps",
]
# Run all tests (headless) – PF version defaults to v6 per conftest
all  = "pytest -v --headless {args}"
# PF-version-specific convenience scripts used locally and in CI
pf5  = "pytest -v --headless --pf-version=v5 {args}"
pf6  = "pytest -v --headless --pf-version=v6 {args}"
# Headed mode for local interactive debugging
debug = "pytest -v --pf-version=v6 {args}"

[tool.hatch.envs.lint]
dependencies = ["pre-commit"]

[tool.hatch.envs.lint.scripts]
check = "pre-commit run --all-files"

[tool.pytest.ini_options]
testpaths = ["testing"]
timeout = 60

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["F", "I", "PL", "UP"]
extend-ignore = ["PLR2004", "PLE0643", "PLR0913"]
